bugfixes text--gradient-cool-colors on IE

--- a/style-guide/source/css/layout/_typography.scss
+++ b/style-guide/source/css/layout/_typography.scss
@@ -268,7 +268,8 @@ hr {
 // Internet Explorer
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
   .text--gradient-green,
-  .text--gradient-hot-colors {
+  .text--gradient-hot-colors,
+  .text--gradient-cool-colors {
     background: inherit;
   }
 }
